# OpenGL_Computer_Graphics_Rollercoaster

./: CMakeLists.txt  README.md
Rollercoaster/: main.cpp
Rollercoaster/shaders/: 3D.fs.glsl  3D.vs.glsl  Blinn-Phong.fs.glsl  basic_lighting.fs.glsl  instance3D.vs.glsl  light_cube.fs.glsl  model.fs.glsl  normal_mapping.fs.glsl  normal_mapping.vs.glsl  skybox.vs.glsl
assets/models/Fountain/: Fountain.mtl
assets/models/bush/: bush.mtl
assets/models/grass/: grass.mtl
assets/models/grass1/: grass.mtl
assets/models/plane/: plane_hills.mtl
assets/models/streetlight/: streetlight.mtl
assets/models/train/: train.mtl
assets/models/train_statue/: train_pose.mtl
assets/models/wall/: wall.mtl
assets/models/wall2/: wall.mtl
glimac/: CMakeLists.txt
glimac/glimac/: BBox.hpp  Cube.hpp  FreeflyCamera.hpp  InstanceModel.hpp  Mesh.hpp  Mesh2.hpp  Model.hpp  Quad.hpp  Skybox.hpp  Sphere.hpp  Spline.hpp  Texture.hpp  Track.hpp  TrackBallCamera.hpp  Wagon.hpp  common.hpp
glimac/src/: Cube.cpp  Program.cpp  Sphere.cpp  Texture.cpp  Track.cpp
